parser.output
Nonterminals useless in grammar

    RangeClause


Terminals unused in grammar

    NULLPOINTER
    RANGE
    CONST
    EQ


Rules useless in grammar

  220 RangeClause: RANGE Expression
  221            | IdentifierList INFER_EQ RANGE Expression
  222            | ExpressionList ASSGN_OP RANGE Expression


State 112 conflicts: 1 shift/reduce
State 147 conflicts: 1 shift/reduce
State 148 conflicts: 1 shift/reduce, 1 reduce/reduce
State 246 conflicts: 1 reduce/reduce
State 294 conflicts: 19 shift/reduce
State 297 conflicts: 1 reduce/reduce


Grammar

    0 $accept: SourceFile $end

    1 SourceFile: PackageClause SCOLON ImportDeclList TopLevelDeclList

    2 OpenBlock: %empty

    3 CloseBlock: %empty

    4 PackageClause: PACKAGE PackageName

    5 PackageName: IDENTIFIER

    6 ImportDeclList: ImportDeclList ImportDecl SCOLON
    7               | ImportDecl SCOLON

    8 ImportDecl: IMPORT LEFTPARAN ImportSpecList RIGHTPARAN
    9           | IMPORT LEFTPARAN RIGHTPARAN
   10           | IMPORT ImportSpec

   11 ImportSpecList: ImportSpecList ImportSpec SCOLON
   12               | ImportSpec SCOLON

   13 ImportSpec: PackageName ImportPath
   14           | DOT ImportPath
   15           | ImportPath

   16 ImportPath: String

   17 TopLevelDeclList: TopLevelDeclList TopLevelDecl SCOLON
   18                 | TopLevelDecl SCOLON

   19 TopLevelDecl: Declaration
   20             | FunctionDecl
   21             | MethodDecl

   22 Block: LEFTBRACE OpenBlock StatementList CloseBlock RIGHTBRACE

   23 Condition: Expression

   24 StatementList: StatementList Statement SCOLON
   25              | Statement SCOLON

   26 Statement: Declaration
   27          | LabeledStmt
   28          | SimpleStmt
   29          | ReturnStmt
   30          | BreakStmt
   31          | ContinueStmt
   32          | GotoStmt
   33          | SwitchStmt
   34          | FallthroughStmt
   35          | Block
   36          | IfStmt
   37          | ForStmt

   38 Declaration: TypeDecl
   39            | VarDecl

   40 FunctionDecl: FUNC IDENTIFIER OpenBlock Signature FunctionBody CloseBlock
   41             | FUNC IDENTIFIER OpenBlock Signature CloseBlock

   42 MethodDecl: FUNC Receiver IDENTIFIER Signature
   43           | FUNC Receiver IDENTIFIER Signature FunctionBody

   44 LabeledStmt: IDENTIFIER COLON Statement

   45 SimpleStmt: EmptyStmt
   46           | ExpressionStmt
   47           | IncDecStmt
   48           | Assignment
   49           | ShortVarDecl

   50 EmptyStmt: %empty

   51 EmptyExpr: %empty

   52 ExpressionStmt: Expression

   53 IncDecStmt: Expression PLUSPLUS
   54           | Expression MINUSMINUS

   55 Assignment: ExpressionList ASSGN_OP ExpressionList

   56 ShortVarDecl: IdentifierList INFER_EQ ExpressionList

   57 VarDecl: VAR VarSpec
   58        | VAR LEFTPARAN VarSpecList RIGHTPARAN

   59 VarSpecList: VarSpecList VarSpec SCOLON
   60            | VarSpec SCOLON

   61 VarSpec: IdentifierList Type
   62        | IdentifierList Type ASSGN_OP ExpressionList
   63        | IdentifierList ASSGN_OP ExpressionList

   64 FunctionBody: Block

   65 Signature: Parameters
   66          | Parameters Result

   67 Result: LEFTPARAN TypeList RIGHTPARAN
   68       | Type

   69 TypeList: TypeList COMMA Type
   70         | Type

   71 Parameters: LEFTPARAN RIGHTPARAN
   72           | LEFTPARAN ParameterList RIGHTPARAN
   73           | LEFTPARAN ParameterList COMMA RIGHTPARAN

   74 ParameterList: ParameterDecl
   75              | ParameterList COMMA ParameterDecl

   76 ParameterDecl: IdentifierList Type

   77 IdentifierList: IdentifierList COMMA IDENTIFIER
   78               | IDENTIFIER

   79 Receiver: Parameters

   80 CompositeLit: LiteralType LiteralValue

   81 LiteralType: StructType
   82            | ArrayType
   83            | PointerType
   84            | SliceType
   85            | LEFTSQUARE ELIPSIS RIGHTSQUARE Operand
   86            | MapType

   87 Type: LiteralType
   88     | OperandName

   89 Operand: Literal
   90        | OperandName
   91        | LEFTPARAN Expression RIGHTPARAN

   92 OperandName: IDENTIFIER

   93 LiteralValue: LEFTBRACE RIGHTBRACE
   94             | LEFTBRACE ElementList RIGHTBRACE
   95             | LEFTBRACE ElementList COMMA RIGHTBRACE

   96 SliceType: LEFTSQUARE RIGHTSQUARE Type

   97 ElementList: KeyedElement
   98            | ElementList COMMA KeyedElement

   99 KeyedElement: Element
  100             | Key COLON Element

  101 Key: Expression
  102    | LiteralValue

  103 Element: Expression
  104        | LiteralValue

  105 ReturnStmt: RETURN
  106           | RETURN ExpressionList

  107 BreakStmt: BREAK
  108          | BREAK IDENTIFIER

  109 ContinueStmt: CONTINUE
  110             | CONTINUE IDENTIFIER

  111 GotoStmt: GOTO IDENTIFIER

  112 SwitchStmt: ExprSwitchStmt

  113 ExprSwitchStmt: SWITCH LEFTBRACE RIGHTBRACE
  114               | SWITCH SimpleStmt SCOLON LEFTBRACE RIGHTBRACE
  115               | SWITCH Expression LEFTBRACE RIGHTBRACE
  116               | SWITCH SimpleStmt SCOLON Expression LEFTBRACE RIGHTBRACE
  117               | SWITCH LEFTBRACE ExprCaseClauseList RIGHTBRACE
  118               | SWITCH SimpleStmt SCOLON LEFTBRACE ExprCaseClauseList RIGHTBRACE
  119               | SWITCH Expression LEFTBRACE ExprCaseClauseList RIGHTBRACE
  120               | SWITCH SimpleStmt SCOLON Expression LEFTBRACE ExprCaseClauseList RIGHTBRACE

  121 ExprCaseClauseList: ExprCaseClauseList ExprCaseClause
  122                   | ExprCaseClause

  123 ExprCaseClause: ExprSwitchCase COLON StatementList

  124 ExprSwitchCase: CASE ExpressionList
  125               | DEFAULT

  126 FallthroughStmt: FALLTHROUGH

  127 IfStmt: IF OpenBlock Expression Block CloseBlock
  128       | IF OpenBlock SimpleStmt SCOLON Expression Block CloseBlock
  129       | IF OpenBlock Expression Block ELSE IfStmt CloseBlock
  130       | IF OpenBlock Expression Block ELSE Block CloseBlock
  131       | IF OpenBlock SimpleStmt SCOLON Expression Block ELSE IfStmt CloseBlock
  132       | IF OpenBlock SimpleStmt SCOLON Expression Block ELSE Block CloseBlock

  133 ForStmt: FOR forMarker Block forMarkerEnd
  134        | FOR OpenBlock SimpleStmt SCOLON forMarker EmptyExpr SCOLON SimpleStmt Block forMarkerEnd CloseBlock
  135        | FOR OpenBlock SimpleStmt SCOLON forMarker ExpressionStmt SCOLON SimpleStmt Block forMarkerEnd CloseBlock
  136        | FOR OpenBlock Condition forMarker Block forMarkerEnd CloseBlock
  137        | FOR OpenBlock EmptyStmt Empty forMarker Expression Empty EmptyStmt Block forMarkerEnd CloseBlock

  138 forMarker: %empty

  139 forMarkerEnd: %empty

  140 Empty: %empty

  141 Expression: Expression MUL Expression
  142           | Expression QUOT Expression
  143           | Expression MOD Expression
  144           | Expression SHL Expression
  145           | Expression SHR Expression
  146           | Expression AND Expression
  147           | Expression ANDNOT Expression
  148           | Expression ADD Expression
  149           | Expression SUB Expression
  150           | Expression OR Expression
  151           | Expression XOR Expression
  152           | Expression LOGAND Expression
  153           | Expression LOGOR Expression
  154           | Expression ISEQ Expression
  155           | Expression NEQ Expression
  156           | Expression GRTEQ Expression
  157           | Expression GRT Expression
  158           | Expression LESSEQ Expression
  159           | Expression LESS Expression
  160           | UnaryExpr

  161 UnaryExpr: MUL PrimaryExpr
  162          | AND PrimaryExpr
  163          | ADD PrimaryExpr
  164          | SUB PrimaryExpr
  165          | NOT PrimaryExpr
  166          | PrimaryExpr

  167 PrimaryExpr: Operand
  168            | MakeExpr
  169            | PrimaryExpr Selector
  170            | PrimaryExpr Index
  171            | PrimaryExpr Slice
  172            | PrimaryExpr Arguments
  173            | OperandName StructLiteral
  174            | PrimaryExpr TypeAssertion

  175 StructLiteral: LEFTBRACE KeyValueList RIGHTBRACE

  176 KeyValueList: Expression COLON Expression
  177             | Expression COLON Expression COMMA KeyValueList

  178 Selector: DOT IDENTIFIER

  179 Index: LEFTSQUARE Expression RIGHTSQUARE

  180 Slice: LEFTSQUARE COLON Expression RIGHTSQUARE
  181      | LEFTSQUARE COLON RIGHTSQUARE
  182      | LEFTSQUARE Expression COLON RIGHTSQUARE
  183      | LEFTSQUARE Expression COLON Expression RIGHTSQUARE
  184      | LEFTSQUARE COLON Expression COLON Expression RIGHTSQUARE
  185      | LEFTSQUARE Expression COLON Expression COLON Expression RIGHTSQUARE

  186 MakeExpr: MAKE LEFTPARAN Type COMMA Expression COMMA Expression RIGHTPARAN
  187         | MAKE LEFTPARAN Type COMMA Expression RIGHTPARAN
  188         | MAKE LEFTPARAN Type RIGHTPARAN
  189         | NEW LEFTPARAN Type RIGHTPARAN

  190 TypeAssertion: DOT LEFTPARAN Type RIGHTPARAN

  191 Arguments: LEFTPARAN RIGHTPARAN
  192          | LEFTPARAN ExpressionList RIGHTPARAN
  193          | LEFTPARAN ExpressionList ELIPSIS RIGHTPARAN

  194 ExpressionList: Expression
  195               | ExpressionList COMMA Expression

  196 TypeDecl: TYPE LEFTPARAN TypeSpec SCOLON RIGHTPARAN
  197         | TYPE TypeSpec

  198 TypeSpec: TypeDef

  199 TypeDef: IDENTIFIER Type

  200 MapType: MAP LEFTSQUARE Type RIGHTSQUARE Type

  201 StructType: STRUCT LEFTBRACE FieldDeclList RIGHTBRACE
  202           | STRUCT LEFTBRACE RIGHTBRACE

  203 FieldDeclList: FieldDecl SCOLON
  204              | FieldDeclList FieldDecl SCOLON

  205 FieldDecl: IdentifierList Type String
  206          | IdentifierList Type

  207 PointerType: MUL BaseType

  208 BaseType: Type

  209 ArrayType: LEFTSQUARE Expression RIGHTSQUARE Type

  210 Literal: BasicLit
  211        | CompositeLit

  212 BasicLit: INTEGER_VAL
  213         | FLOAT_VAL
  214         | BYTE_VAL
  215         | String
  216         | TRUE
  217         | FALSE

  218 String: RAW_STRING
  219       | INTERPRETED_STRING


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    INTEGER_VAL <sval> (258) 212
    FLOAT_VAL <sval> (259) 213
    TRUE <sval> (260) 216
    FALSE <sval> (261) 217
    NULLPOINTER <sval> (262)
    BREAK <sval> (263) 107 108
    CONTINUE <sval> (264) 109 110
    RETURN <sval> (265) 105 106
    SCOLON <sval> (266) 1 6 7 11 12 17 18 24 25 59 60 114 116 118 120 128 131 132 134 135 196 203 204
    FUNC <sval> (267) 40 41 42 43
    STRUCT <sval> (268) 201 202
    ELSE <sval> (269) 129 130 131 132
    PACKAGE <sval> (270) 4
    IF <sval> (271) 127 128 129 130 131 132
    FOR <sval> (272) 133 134 135 136 137
    RANGE <sval> (273)
    IMPORT <sval> (274) 8 9 10
    VAR <sval> (275) 57 58
    SWITCH <sval> (276) 113 114 115 116 117 118 119 120
    CASE <sval> (277) 124
    NEW <sval> (278) 189
    CONST <sval> (279)
    MAP <sval> (280) 200
    DEFAULT <sval> (281) 125
    MAKE <sval> (282) 186 187 188
    GOTO <sval> (283) 111
    FALLTHROUGH <sval> (284) 126
    TYPE <sval> (285) 196 197
    PLUSPLUS <sval> (286) 53
    MINUSMINUS <sval> (287) 54
    ANDNOT <sval> (288) 147
    ELIPSIS <sval> (289) 85 193
    ADD <sval> (290) 148 163
    SUB <sval> (291) 149 164
    NOT <sval> (292) 165
    XOR <sval> (293) 151
    MUL <sval> (294) 141 161 207
    AND <sval> (295) 146 162
    OR <sval> (296) 150
    LOGOR <sval> (297) 153
    LOGAND <sval> (298) 152
    ISEQ <sval> (299) 154
    NEQ <sval> (300) 155
    LESSEQ <sval> (301) 158
    GRTEQ <sval> (302) 156
    GRT <sval> (303) 157
    LESS <sval> (304) 159
    MOD <sval> (305) 143
    QUOT <sval> (306) 142
    SHL <sval> (307) 144
    SHR <sval> (308) 145
    EQ <sval> (309)
    INFER_EQ <sval> (310) 56
    RIGHTPARAN <sval> (311) 8 9 58 67 71 72 73 91 186 187 188 189 190 191 192 193 196
    RIGHTBRACE <sval> (312) 22 93 94 95 113 114 115 116 117 118 119 120 175 201 202
    RIGHTSQUARE <sval> (313) 85 96 179 180 181 182 183 184 185 200 209
    LEFTPARAN <sval> (314) 8 9 58 67 71 72 73 91 186 187 188 189 190 191 192 193 196
    LEFTBRACE <sval> (315) 22 93 94 95 113 114 115 116 117 118 119 120 175 201 202
    LEFTSQUARE <sval> (316) 85 96 179 180 181 182 183 184 185 200 209
    COLON <sval> (317) 44 100 123 176 177 180 181 182 183 184 185
    DOT <sval> (318) 14 178 190
    COMMA <sval> (319) 69 73 75 77 95 98 177 186 187 195
    RAW_STRING <sval> (320) 218
    INTERPRETED_STRING <sval> (321) 219
    BYTE_VAL <sval> (322) 214
    IDENTIFIER <sval> (323) 5 40 41 42 43 44 77 78 92 108 110 111 178 199
    ASSGN_OP <sval> (324) 55 62 63


Nonterminals, with rules where they appear

    $accept (70)
        on left: 0
    SourceFile <nt> (71)
        on left: 1
        on right: 0
    OpenBlock (72)
        on left: 2
        on right: 22 40 41 127 128 129 130 131 132 134 135 136 137
    CloseBlock (73)
        on left: 3
        on right: 22 40 41 127 128 129 130 131 132 134 135 136 137
    PackageClause <nt> (74)
        on left: 4
        on right: 1
    PackageName <nt> (75)
        on left: 5
        on right: 4 13
    ImportDeclList <nt> (76)
        on left: 6 7
        on right: 1 6
    ImportDecl <nt> (77)
        on left: 8 9 10
        on right: 6 7
    ImportSpecList <nt> (78)
        on left: 11 12
        on right: 8 11
    ImportSpec <nt> (79)
        on left: 13 14 15
        on right: 10 11 12
    ImportPath <nt> (80)
        on left: 16
        on right: 13 14 15
    TopLevelDeclList <nt> (81)
        on left: 17 18
        on right: 1 17
    TopLevelDecl <nt> (82)
        on left: 19 20 21
        on right: 17 18
    Block <nt> (83)
        on left: 22
        on right: 35 64 127 128 129 130 131 132 133 134 135 136 137
    Condition <nt> (84)
        on left: 23
        on right: 136
    StatementList <nt> (85)
        on left: 24 25
        on right: 22 24 123
    Statement <nt> (86)
        on left: 26 27 28 29 30 31 32 33 34 35 36 37
        on right: 24 25 44
    Declaration <nt> (87)
        on left: 38 39
        on right: 19 26
    FunctionDecl <nt> (88)
        on left: 40 41
        on right: 20
    MethodDecl <nt> (89)
        on left: 42 43
        on right: 21
    LabeledStmt <nt> (90)
        on left: 44
        on right: 27
    SimpleStmt <nt> (91)
        on left: 45 46 47 48 49
        on right: 28 114 116 118 120 128 131 132 134 135
    EmptyStmt <nt> (92)
        on left: 50
        on right: 45 137
    EmptyExpr <nt> (93)
        on left: 51
        on right: 134
    ExpressionStmt <nt> (94)
        on left: 52
        on right: 46 135
    IncDecStmt <nt> (95)
        on left: 53 54
        on right: 47
    Assignment <nt> (96)
        on left: 55
        on right: 48
    ShortVarDecl <nt> (97)
        on left: 56
        on right: 49
    VarDecl <nt> (98)
        on left: 57 58
        on right: 39
    VarSpecList <nt> (99)
        on left: 59 60
        on right: 58 59
    VarSpec <nt> (100)
        on left: 61 62 63
        on right: 57 59 60
    FunctionBody <nt> (101)
        on left: 64
        on right: 40 43
    Signature <nt> (102)
        on left: 65 66
        on right: 40 41 42 43
    Result <nt> (103)
        on left: 67 68
        on right: 66
    TypeList <nt> (104)
        on left: 69 70
        on right: 67 69
    Parameters <nt> (105)
        on left: 71 72 73
        on right: 65 66 79
    ParameterList <nt> (106)
        on left: 74 75
        on right: 72 73 75
    ParameterDecl <nt> (107)
        on left: 76
        on right: 74 75
    IdentifierList <nt> (108)
        on left: 77 78
        on right: 56 61 62 63 76 77 205 206
    Receiver <nt> (109)
        on left: 79
        on right: 42 43
    CompositeLit <nt> (110)
        on left: 80
        on right: 211
    LiteralType <nt> (111)
        on left: 81 82 83 84 85 86
        on right: 80 87
    Type <nt> (112)
        on left: 87 88
        on right: 61 62 68 69 70 76 96 186 187 188 189 190 199 200 205 206 208 209
    Operand <nt> (113)
        on left: 89 90 91
        on right: 85 167
    OperandName <nt> (114)
        on left: 92
        on right: 88 90 173
    LiteralValue <nt> (115)
        on left: 93 94 95
        on right: 80 102 104
    SliceType <nt> (116)
        on left: 96
        on right: 84
    ElementList <nt> (117)
        on left: 97 98
        on right: 94 95 98
    KeyedElement <nt> (118)
        on left: 99 100
        on right: 97 98
    Key <nt> (119)
        on left: 101 102
        on right: 100
    Element <nt> (120)
        on left: 103 104
        on right: 99 100
    ReturnStmt <nt> (121)
        on left: 105 106
        on right: 29
    BreakStmt <nt> (122)
        on left: 107 108
        on right: 30
    ContinueStmt <nt> (123)
        on left: 109 110
        on right: 31
    GotoStmt <nt> (124)
        on left: 111
        on right: 32
    SwitchStmt <nt> (125)
        on left: 112
        on right: 33
    ExprSwitchStmt <nt> (126)
        on left: 113 114 115 116 117 118 119 120
        on right: 112
    ExprCaseClauseList <nt> (127)
        on left: 121 122
        on right: 117 118 119 120 121
    ExprCaseClause <nt> (128)
        on left: 123
        on right: 121 122
    ExprSwitchCase <nt> (129)
        on left: 124 125
        on right: 123
    FallthroughStmt <nt> (130)
        on left: 126
        on right: 34
    IfStmt <nt> (131)
        on left: 127 128 129 130 131 132
        on right: 36 129 131
    ForStmt <nt> (132)
        on left: 133 134 135 136 137
        on right: 37
    forMarker <nt> (133)
        on left: 138
        on right: 133 134 135 136 137
    forMarkerEnd <nt> (134)
        on left: 139
        on right: 133 134 135 136 137
    Empty <nt> (135)
        on left: 140
        on right: 137
    Expression <nt> (136)
        on left: 141 142 143 144 145 146 147 148 149 150 151 152 153 154 155 156 157 158 159 160
        on right: 23 52 53 54 91 101 103 115 116 119 120 127 128 129 130 131 132 137 141 142 143 144 145 146 147 148 149 150 151 152 153 154 155 156 157 158 159 176 177 179 180 182 183 184 185 186 187 194 195 209
    UnaryExpr <nt> (137)
        on left: 161 162 163 164 165 166
        on right: 160
    PrimaryExpr <nt> (138)
        on left: 167 168 169 170 171 172 173 174
        on right: 161 162 163 164 165 166 169 170 171 172 174
    StructLiteral <nt> (139)
        on left: 175
        on right: 173
    KeyValueList <nt> (140)
        on left: 176 177
        on right: 175 177
    Selector <nt> (141)
        on left: 178
        on right: 169
    Index <nt> (142)
        on left: 179
        on right: 170
    Slice <nt> (143)
        on left: 180 181 182 183 184 185
        on right: 171
    MakeExpr <nt> (144)
        on left: 186 187 188 189
        on right: 168
    TypeAssertion <nt> (145)
        on left: 190
        on right: 174
    Arguments <nt> (146)
        on left: 191 192 193
        on right: 172
    ExpressionList <nt> (147)
        on left: 194 195
        on right: 55 56 62 63 106 124 192 193 195
    TypeDecl <nt> (148)
        on left: 196 197
        on right: 38
    TypeSpec <nt> (149)
        on left: 198
        on right: 196 197
    TypeDef <nt> (150)
        on left: 199
        on right: 198
    MapType <nt> (151)
        on left: 200
        on right: 86
    StructType <nt> (152)
        on left: 201 202
        on right: 81
    FieldDeclList <nt> (153)
        on left: 203 204
        on right: 201 204
    FieldDecl <nt> (154)
        on left: 205 206
        on right: 203 204
    PointerType <nt> (155)
        on left: 207
        on right: 83
    BaseType <nt> (156)
        on left: 208
        on right: 207
    ArrayType <nt> (157)
        on left: 209
        on right: 82
    Literal <nt> (158)
        on left: 210 211
        on right: 89
    BasicLit <nt> (159)
        on left: 212 213 214 215 216 217
        on right: 210
    String <nt> (160)
        on left: 218 219
        on right: 16 205 215


State 0

    0 $accept: • SourceFile $end

    PACKAGE  shift, and go to state 1

    SourceFile     go to state 2
    PackageClause  go to state 3


State 1

    4 PackageClause: PACKAGE • PackageName

    IDENTIFIER  shift, and go to state 4

    PackageName  go to state 5


State 2

    0 $accept: SourceFile • $end

    $end  shift, and go to state 6


State 3

    1 SourceFile: PackageClause • SCOLON ImportDeclList TopLevelDeclList

    SCOLON  shift, and go to state 7


State 4

    5 PackageName: IDENTIFIER •

    $default  reduce using rule 5 (PackageName)


State 5

    4 PackageClause: PACKAGE PackageName •

    $default  reduce using rule 4 (PackageClause)


State 6

    0 $accept: SourceFile $end •

    $default  accept


State 7

    1 SourceFile: PackageClause SCOLON • ImportDeclList TopLevelDeclList

    IMPORT  shift, and go to state 8

    ImportDeclList  go to state 9
    ImportDecl      go to state 10


State 8

    8 ImportDecl: IMPORT • LEFTPARAN ImportSpecList RIGHTPARAN
    9           | IMPORT • LEFTPARAN RIGHTPARAN
   10           | IMPORT • ImportSpec

    LEFTPARAN           shift, and go to state 11
    DOT                 shift, and go to state 12
    RAW_STRING          shift, and go to state 13
    INTERPRETED_STRING  shift, and go to state 14
    IDENTIFIER          shift, and go to state 4

    PackageName  go to state 15
    ImportSpec   go to state 16
    ImportPath   go to state 17
    String       go to state 18


State 9

    1 SourceFile: PackageClause SCOLON ImportDeclList • TopLevelDeclList
    6 ImportDeclList: ImportDeclList • ImportDecl SCOLON

    FUNC    shift, and go to state 19
    IMPORT  shift, and go to state 8
    VAR     shift, and go to state 20
    TYPE    shift, and go to state 21

    ImportDecl        go to state 22
    TopLevelDeclList  go to state 23
    TopLevelDecl      go to state 24
    Declaration       go to state 25
    FunctionDecl      go to state 26
    MethodDecl        go to state 27
    VarDecl           go to state 28
    TypeDecl          go to state 29


State 10

    7 ImportDeclList: ImportDecl • SCOLON

    SCOLON  shift, and go to state 30


State 11

    8 ImportDecl: IMPORT LEFTPARAN • ImportSpecList RIGHTPARAN
    9           | IMPORT LEFTPARAN • RIGHTPARAN

    RIGHTPARAN          shift, and go to state 31
    DOT                 shift, and go to state 12
    RAW_STRING          shift, and go to state 13
    INTERPRETED_STRING  shift, and go to state 14
    IDENTIFIER          shift, and go to state 4

    PackageName     go to state 15
    ImportSpecList  go to state 32
    ImportSpec      go to state 33
    ImportPath      go to state 17
    String          go to state 18


State 12

   14 ImportSpec: DOT • ImportPath

    RAW_STRING          shift, and go to state 13
    INTERPRETED_STRING  shift, and go to state 14

    ImportPath  go to state 34
    String      go to state 18


State 13

  218 String: RAW_STRING •

    $default  reduce using rule 218 (String)


State 14

  219 String: INTERPRETED_STRING •

    $default  reduce using rule 219 (String)


State 15

   13 ImportSpec: PackageName • ImportPath

    RAW_STRING          shift, and go to state 13
    INTERPRETED_STRING  shift, and go to state 14

    ImportPath  go to state 35
    String      go to state 18


State 16

   10 ImportDecl: IMPORT ImportSpec •

    $default  reduce using rule 10 (ImportDecl)


State 17

   15 ImportSpec: ImportPath •

    $default  reduce using rule 15 (ImportSpec)


State 18

   16 ImportPath: String •

    $default  reduce using rule 16 (ImportPath)


State 19

   40 FunctionDecl: FUNC • IDENTIFIER OpenBlock Signature FunctionBody CloseBlock
   41             | FUNC • IDENTIFIER OpenBlock Signature CloseBlock
   42 MethodDecl: FUNC • Receiver IDENTIFIER Signature
   43           | FUNC • Receiver IDENTIFIER Signature FunctionBody

    LEFTPARAN   shift, and go to state 36
    IDENTIFIER  shift, and go to state 37

    Parameters  go to state 38
    Receiver    go to state 39


State 20

   57 VarDecl: VAR • VarSpec
   58        | VAR • LEFTPARAN VarSpecList RIGHTPARAN

    LEFTPARAN   shift, and go to state 40
    IDENTIFIER  shift, and go to state 41

    VarSpec         go to state 42
    IdentifierList  go to state 43


State 21

  196 TypeDecl: TYPE • LEFTPARAN TypeSpec SCOLON RIGHTPARAN
  197         | TYPE • TypeSpec

    LEFTPARAN   shift, and go to state 44
    IDENTIFIER  shift, and go to state 45

    TypeSpec  go to state 46
    TypeDef   go to state 47


State 22

    6 ImportDeclList: ImportDeclList ImportDecl • SCOLON

    SCOLON  shift, and go to state 48


State 23

    1 SourceFile: PackageClause SCOLON ImportDeclList TopLevelDeclList •
   17 TopLevelDeclList: TopLevelDeclList • TopLevelDecl SCOLON

    FUNC  shift, and go to state 19
    VAR   shift, and go to state 20
    TYPE  shift, and go to state 21

    $default  reduce using rule 1 (SourceFile)

    TopLevelDecl  go to state 49
    Declaration   go to state 25
    FunctionDecl  go to state 26
    MethodDecl    go to state 27
    VarDecl       go to state 28
    TypeDecl      go to state 29


State 24

   18 TopLevelDeclList: TopLevelDecl • SCOLON

    SCOLON  shift, and go to state 50


State 25

   19 TopLevelDecl: Declaration •

    $default  reduce using rule 19 (TopLevelDecl)


State 26

   20 TopLevelDecl: FunctionDecl •

    $default  reduce using rule 20 (TopLevelDecl)


State 27

   21 TopLevelDecl: MethodDecl •

    $default  reduce using rule 21 (TopLevelDecl)


State 28

   39 Declaration: VarDecl •

    $default  reduce using rule 39 (Declaration)


State 29

   38 Declaration: TypeDecl •

    $default  reduce using rule 38 (Declaration)


State 30

    7 ImportDeclList: ImportDecl SCOLON •

    $default  reduce using rule 7 (ImportDeclList)


State 31

    9 ImportDecl: IMPORT LEFTPARAN RIGHTPARAN •

    $default  reduce using rule 9 (ImportDecl)


State 32

    8 ImportDecl: IMPORT LEFTPARAN ImportSpecList • RIGHTPARAN
   11 ImportSpecList: ImportSpecList • ImportSpec SCOLON

    RIGHTPARAN          shift, and go to state 51
    DOT                 shift, and go to state 12
    RAW_STRING          shift, and go to state 13
    INTERPRETED_STRING  shift, and go to state 14
    IDENTIFIER          shift, and go to state 4

    PackageName  go to state 15
    ImportSpec   go to state 52
    ImportPath   go to state 17
    String       go to state 18


State 33

   12 ImportSpecList: ImportSpec • SCOLON

    SCOLON  shift, and go to state 53


State 34

   14 ImportSpec: DOT ImportPath •

    $default  reduce using rule 14 (ImportSpec)


State 35

   13 ImportSpec: PackageName ImportPath •

    $default  reduce using rule 13 (ImportSpec)


State 36

   71 Parameters: LEFTPARAN • RIGHTPARAN
   72           | LEFTPARAN • ParameterList RIGHTPARAN
   73           | LEFTPARAN • ParameterList COMMA RIGHTPARAN

    RIGHTPARAN  shift, and go to state 54
    IDENTIFIER  shift, and go to state 41

    ParameterList   go to state 55
    ParameterDecl   go to state 56
    IdentifierList  go to state 57


State 37

   40 FunctionDecl: FUNC IDENTIFIER • OpenBlock Signature FunctionBody CloseBlock
   41             | FUNC IDENTIFIER • OpenBlock Signature CloseBlock

    $default  reduce using rule 2 (OpenBlock)

    OpenBlock  go to state 58


State 38

   79 Receiver: Parameters •

    $default  reduce using rule 79 (Receiver)


State 39

   42 MethodDecl: FUNC Receiver • IDENTIFIER Signature
   43           | FUNC Receiver • IDENTIFIER Signature FunctionBody

    IDENTIFIER  shift, and go to state 59


State 40

   58 VarDecl: VAR LEFTPARAN • VarSpecList RIGHTPARAN

    IDENTIFIER  shift, and go to state 41

    VarSpecList     go to state 60
    VarSpec         go to state 61
    IdentifierList  go to state 43


State 41

   78 IdentifierList: IDENTIFIER •

    $default  reduce using rule 78 (IdentifierList)


State 42

   57 VarDecl: VAR VarSpec •

    $default  reduce using rule 57 (VarDecl)


State 43

   61 VarSpec: IdentifierList • Type
   62        | IdentifierList • Type ASSGN_OP ExpressionList
   63        | IdentifierList • ASSGN_OP ExpressionList
   77 IdentifierList: IdentifierList • COMMA IDENTIFIER

    STRUCT      shift, and go to state 62
    MAP         shift, and go to state 63
    MUL         shift, and go to state 64
    LEFTSQUARE  shift, and go to state 65
    COMMA       shift, and go to state 66
    IDENTIFIER  shift, and go to state 67
    ASSGN_OP    shift, and go to state 68

    LiteralType  go to state 69
    Type         go to state 70
    OperandName  go to state 71
    SliceType    go to state 72
    MapType      go to state 73
    StructType   go to state 74
    PointerType  go to state 75
    ArrayType    go to state 76


State 44

  196 TypeDecl: TYPE LEFTPARAN • TypeSpec SCOLON RIGHTPARAN

    IDENTIFIER  shift, and go to state 45

    TypeSpec  go to state 77
    TypeDef   go to state 47


State 45

  199 TypeDef: IDENTIFIER • Type

    STRUCT      shift, and go to state 62
    MAP         shift, and go to state 63
    MUL         shift, and go to state 64
    LEFTSQUARE  shift, and go to state 65
    IDENTIFIER  shift, and go to state 67

    LiteralType  go to state 69
    Type         go to state 78
    OperandName  go to state 71
    SliceType    go to state 72
    MapType      go to state 73
    StructType   go to state 74
    PointerType  go to state 75
    ArrayType    go to state 76


State 46

  197 TypeDecl: TYPE TypeSpec •

    $default  reduce using rule 197 (TypeDecl)


State 47

  198 TypeSpec: TypeDef •

    $default  reduce using rule 198 (TypeSpec)


State 48

    6 ImportDeclList: ImportDeclList ImportDecl SCOLON •

    $default  reduce using rule 6 (ImportDeclList)


State 49

   17 TopLevelDeclList: TopLevelDeclList TopLevelDecl • SCOLON

    SCOLON  shift, and go to state 79


State 50

   18 TopLevelDeclList: TopLevelDecl SCOLON •

    $default  reduce using rule 18 (TopLevelDeclList)


State 51

    8 ImportDecl: IMPORT LEFTPARAN ImportSpecList RIGHTPARAN •

    $default  reduce using rule 8 (ImportDecl)


State 52

   11 ImportSpecList: ImportSpecList ImportSpec • SCOLON

    SCOLON  shift, and go to state 80


State 53

   12 ImportSpecList: ImportSpec SCOLON •

    $default  reduce using rule 12 (ImportSpecList)


State 54

   71 Parameters: LEFTPARAN RIGHTPARAN •

    $default  reduce using rule 71 (Parameters)


State 55

   72 Parameters: LEFTPARAN ParameterList • RIGHTPARAN
   73           | LEFTPARAN ParameterList • COMMA RIGHTPARAN
   75 ParameterList: ParameterList • COMMA ParameterDecl

    RIGHTPARAN  shift, and go to state 81
    COMMA       shift, and go to state 82


State 56

   74 ParameterList: ParameterDecl •

    $default  reduce using rule 74 (ParameterList)


State 57

   76 ParameterDecl: IdentifierList • Type
   77 IdentifierList: IdentifierList • COMMA IDENTIFIER

    STRUCT      shift, and go to state 62
    MAP         shift, and go to state 63
    MUL         shift, and go to state 64
    LEFTSQUARE  shift, and go to state 65
    COMMA       shift, and go to state 66
    IDENTIFIER  shift, and go to state 67
